롱노트 표현, 시작노트 이동 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\Dummy.cs" />
     <Compile Include="Assets\Scripts\LongNote.cs" />
-    <Compile Include="Assets\Scripts\LongNoteArrow.cs" />
+    <Compile Include="Assets\Scripts\LongNoteStopover.cs" />
     <Compile Include="Assets\Scripts\SetNote.cs" />
     <Compile Include="Assets\Scripts\ShortNote.cs" />
     <Compile Include="Assets\Scripts\SystemManager.cs" />
