Note(채보) 및 Song(악곡 정보) Class 구현 롱노트(1) 도착노트 부모 위치 관련 오류 수정 롱노트 멀티터치 시 둘 다 죽는 오류 수정 채보메이커로 만든 File 이식 및 타이밍 조절 성공 -> Log로만 구현, 위치와 노트 이름만 구분해서 활성화시키면 됨. 현재 오차 : 15ms ChoiceStage Scene 제작, 악곡의 종류를 csv로 관리할 수 있게 구현 ChoiceStage에서 한 번 터치 시 하이라이트 부분 음악이 나오고, 한 번 더 터치 시 Scene이 넘어가도록 수정 -> 악곡의 이름이 현재 정적으로 되어있어서, 동적으로 바꿔야 함!!!
채보메이커 노트파일 저장시 타이틀이 만들어지도록 수정

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -62,12 +62,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ChoiceStageManager.cs" />
+    <Compile Include="Assets\FileManager.cs" />
+    <Compile Include="Assets\Note.cs" />
+    <Compile Include="Assets\PlayMusicInfo.cs" />
     <Compile Include="Assets\Scripts\LongNote.cs" />
     <Compile Include="Assets\Scripts\LongNoteStopover.cs" />
     <Compile Include="Assets\Scripts\SetNote.cs" />
     <Compile Include="Assets\Scripts\ShortNote.cs" />
     <Compile Include="Assets\Scripts\SystemManager.cs" />
-    <Compile Include="Assets\TimetestScript.cs" />
+    <Compile Include="Assets\Song.cs" />
+    <Compile Include="Assets\SoundManager.cs" />
+    <None Include="Assets\Resources\Notes\evans.txt" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/2021_1_Project/2021_1_Project/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
