Time과 Joint의 위치에 따라 Note 활성화 / 비활성화 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\NotePoolingManager.cs" />
     <Compile Include="Assets\PlayMusicInfo.cs" />
     <Compile Include="Assets\Scripts\LongNote.cs" />
+    <Compile Include="Assets\Scripts\LongNoteDepart.cs" />
     <Compile Include="Assets\Scripts\LongNoteStopover.cs" />
     <Compile Include="Assets\Scripts\SetNote.cs" />
     <Compile Include="Assets\Scripts\ShortNote.cs" />
