HP 시스템 구현(broken note는 랜덤이미지로 구현) 콤보 시스템 구현(일정 콤보 이상 도달시 HP가 회복되는 기능 구현) 판정 시스템 구현 판정 라인 상향

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -66,7 +66,10 @@
     <Compile Include="Assets\Scripts\ChoiceStage\Song.cs" />
     <Compile Include="Assets\Scripts\Ingame\PlayMusicInfo.cs" />
     <Compile Include="Assets\Scripts\Ingame\SetNote.cs" />
+    <Compile Include="Assets\Scripts\Manager\ComboManager.cs" />
     <Compile Include="Assets\Scripts\Manager\FileManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\HPManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\JudgeManager.cs" />
     <Compile Include="Assets\Scripts\Manager\NotePoolingManager.cs" />
     <Compile Include="Assets\Scripts\Manager\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Manager\SystemManager.cs" />
