Motion 변경시 테두리가 나타나는 이펙트 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Scripts\Manager\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Manager\SystemManager.cs" />
     <Compile Include="Assets\Scripts\Motion\Motion.cs" />
+    <Compile Include="Assets\Scripts\Motion\SetEdge.cs" />
     <Compile Include="Assets\Scripts\Notes\LongNote.cs" />
     <Compile Include="Assets\Scripts\Notes\LongNoteDepart.cs" />
     <Compile Include="Assets\Scripts\Notes\LongNoteStopover.cs" />
