--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Assets\Scripts\Notes\LongNoteStopover.cs" />
     <Compile Include="Assets\Scripts\Notes\Note.cs" />
     <Compile Include="Assets\Scripts\Notes\ShortNote.cs" />
-    <Compile Include="Assets\Temp\SkullNote.cs" />
+    <Compile Include="Assets\Scripts\Notes\SkullNote.cs" />
     <Compile Include="Assets\Temp\Test.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
