--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\ChoiceStage\AutoControl.cs" />
     <Compile Include="Assets\Scripts\ChoiceStage\ChoiceStageManager.cs" />
     <Compile Include="Assets\Scripts\ChoiceStage\Song.cs" />
+    <Compile Include="Assets\Scripts\Ingame\CutSceneViewer.cs" />
     <Compile Include="Assets\Scripts\Ingame\PlayMusicInfo.cs" />
     <Compile Include="Assets\Scripts\Ingame\SetNote.cs" />
     <Compile Include="Assets\Scripts\Manager\CharacterManager.cs" />
@@ -94,6 +95,7 @@
     <None Include="Assets\Resources\Notes\maxburning.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Notes\jomanda.txt" />
+    <None Include="Assets\Resources\Cutscene\tongbagwan\tongbagwan_CS.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
