2스테이지 Mode Scene 제작 SetNote의 FileRead 분리 윗부분의 몬스터 선택 기능의 기초 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Scripts\Notes\Note.cs" />
     <Compile Include="Assets\Scripts\Notes\ShortNote.cs" />
     <Compile Include="Assets\Scripts\Notes\SkullNote.cs" />
+    <Compile Include="Assets\SelectMonster.cs" />
     <Compile Include="Assets\Temp\Test.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
