--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\Scripts\Notes\SkullNote.cs" />
     <Compile Include="Assets\SelectMonster.cs" />
     <Compile Include="Assets\Temp\Test.cs" />
+    <Compile Include="Assets\Vibration.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\Resources\Notes\lachryma.txt" />
