노트 메이커의 Floor Note 추가

--- a/NoteMaker/NoteMaker/NoteMaker.csproj
+++ b/NoteMaker/NoteMaker/NoteMaker.csproj
@@ -114,6 +114,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\bluesquare.png" />
     <Content Include="Resources\circle.png" />
     <None Include="Resources\transparent.png" />
   </ItemGroup>
