관절에 활성화되는 노트의 종류별로 다른 색깔이 보여지도록 기능 수정 (ShortNote : Yellow, LongNote : Green, MultiShortNote : Blue, SlashNote : Purple)

--- a/NoteMaker/NoteMaker/NoteMaker.csproj
+++ b/NoteMaker/NoteMaker/NoteMaker.csproj
@@ -114,6 +114,10 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\longnote.png" />
+    <None Include="Resources\multishortnote.png" />
+    <None Include="Resources\shortnote.png" />
+    <None Include="Resources\slashnote.png" />
     <None Include="Resources\bluesquare.png" />
     <Content Include="Resources\circle.png" />
     <None Include="Resources\transparent.png" />
