FloorNote Ingame 적용

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -99,9 +99,10 @@
     <None Include="Assets\Resources\Notes\swingbaby_03.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\Resources\Notes\swingbaby_DO.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\Resources\Notes\swingbaby_B.txt" />
-    <None Include="Assets\Resources\Notes\swingbaby_A.txt" />
+    <None Include="Assets\Resources\Notes\swingbaby_02.txt" />
     <None Include="Assets\Resources\Notes\swingbaby_01.txt" />
     <None Include="Assets\Resources\Cutscene\tongbagwan\tongbagwan_CS.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
@@ -115,6 +116,7 @@
     <None Include="Assets\Resources\SongInfo.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\Resources\Notes\swingbaby_A.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
