MonsterManager 일부 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\MTECLOGO\AdvertiseMTEC.cs" />
+    <Compile Include="Assets\MonsterManager.cs" />
     <Compile Include="Assets\Scripts\ChoiceStage\AutoControl.cs" />
     <Compile Include="Assets\Scripts\ChoiceStage\ChoiceStageManager.cs" />
     <Compile Include="Assets\Scripts\ChoiceStage\Song.cs" />
