Monster Gauge Fail/Success Sprite 추가 및 변경적용 Monster의 Enable/Disable 시 Smoke 연출 구현

--- a/2021_1_Project/Assembly-CSharp.csproj
+++ b/2021_1_Project/Assembly-CSharp.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\Scripts\Manager\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Manager\SystemManager.cs" />
     <Compile Include="Assets\Scripts\Manager\TitleManager.cs" />
+    <Compile Include="Assets\Scripts\Monster\MonsterSmoke.cs" />
     <Compile Include="Assets\Scripts\Monster\SelectMonster.cs" />
     <Compile Include="Assets\Scripts\Motion\Motion.cs" />
     <Compile Include="Assets\Scripts\Motion\SetEdge.cs" />
